# simulator_framework

./: .gitignore  ARCHITECTURE_AUDIT.md  BUGS.md  CLAUDE.md  DECISIONS.md  FAILURE_AUDIT.md  UNIT_AUDIT.md  backlog.md  bugs.md  copyxplaneplugin.sh  docker-compose.yml  fastdds.xml  smoketestslice4.sh  sourceros.sh  start_backend.sh  start_frontend.sh  start_plotjuggler.sh  start_sim.sh  start_ttyd.sh
core/atmosphere_node/: CMakeLists.txt  package.xml
core/atmosphere_node/src/: atmosphere_node.cpp
core/cigi_bridge/: CMakeLists.txt  README.md  package.xml
core/cigi_bridge/src/: cigi_bridge_node.cpp
core/flight_model_adapter/: CMakeLists.txt  README.md  package.xml
core/flight_model_adapter/src/: flight_model_adapter_node.cpp
core/sim_manager/: CMakeLists.txt  README.md  package.xml
core/sim_manager/src/: sim_manager_node.cpp
hardware/microros_bridge/: CMakeLists.txt  package.xml
hardware/microros_bridge/src/: microros_bridge_node.cpp
sim_msgs/: CMakeLists.txt  README.md  package.xml
sim_msgs/msg/: ArbitrationState.msg  AtmosphereState.msg  AvionicsControls.msg  DeviceHeartbeat.msg  ElectricalState.msg  EngineControls.msg  EngineState.msg  FailureState.msg  FdmState.msg  FlightControls.msg  FuelState.msg  InitialConditions.msg  RawAvionicsControls.msg  RawEngineControls.msg  RawFlightControls.msg  ScenarioEvent.msg  SimAlert.msg  SimCommand.msg  SimState.msg  TerrainState.msg  WeatherState.msg
src/aircraft/c172/: CMakeLists.txt  package.xml  plugins.xml
src/aircraft/c172/config/: air_data.yaml  config.yaml  electrical.yaml  electrical_v1_backup.yaml  electrical_v2.yaml  engine.yaml  engines.yaml  failures.yaml  fuel.yaml  fuel_v1_backup.yaml  gear.yaml  navigation.yaml  weight.yaml
src/aircraft/c172/src/: air_data_model.cpp  electrical_model.cpp  engines_model.cpp  fuel_model.cpp  gear_model.cpp  navigation_model.cpp
src/aircraft/c172/test/: c172_fuel_v2.yaml  test_c172_electrical.cpp  test_c172_fuel.cpp
src/aircraft/ec135/: CMakeLists.txt  package.xml  plugins.xml
src/aircraft/ec135/config/: air_data.yaml  config.yaml  electrical.yaml  engine.yaml  engines.yaml  failures.yaml  fuel.yaml  gear.yaml  navigation.yaml
src/aircraft/ec135/src/: electrical_model.cpp  engines_model.cpp  fuel_model.cpp  gear_model.cpp  navigation_model.cpp
src/core/cigi_bridge/: CMakeLists.txt  package.xml
src/core/cigi_bridge/cigi_ig_interface/: BaseSignal.h  CIGI_IG_Interface.cpp  CIGI_IG_Interface.h  CigiTypes.h  CompCtrlItem.h  Config.cpp  Config.h  ConstantSignal.h  DefaultProc.cpp  DefaultProc.h  DeleteItems.h  EntityCtrl.cpp  EntityCtrl.h  HatHotReq.cpp  HatHotReq.h  ICIGI_IG_Interface.h  ICompCtrlProcessor.h  IEntityCtrlProcessor.h  IGCtrl.cpp  IGCtrl.h  IHotHatProcessor.h  IWeatherCondProcessor.h  InAddress.h  Network.cpp  Network.h  OutAddress.h  PositionAndOrientation.h  RepositionBase.cpp  RepositionBase.h  ShortCompCtrl.cpp  ShortCompCtrl.h  WeatherReq.cpp  WeatherReq.h  XPluginMain.cpp  XmlHelper.h  tinyxml.h
src/core/cigi_bridge/cigi_session/: CMakeLists.txt
src/core/cigi_bridge/config/: cigi_bridge.yaml
src/core/cigi_bridge/src/: cigi_host_node.cpp  hat_request_tracker.cpp  weather_encoder.cpp  weather_sync.cpp
src/core/cigi_bridge/test/: test_cigi_wire_conformance.cpp  test_weather_encoder.cpp  test_weather_sync.cpp
src/core/flight_model_adapter/: CMakeLists.txt  package.xml
src/core/flight_model_adapter/src/: JSBSimAdapter.cpp  flight_model_adapter_node.cpp
src/core/input_arbitrator/: CMakeLists.txt  package.xml
src/core/input_arbitrator/src/: input_arbitrator_node.cpp
src/core/navaid_sim/: CLAUDE.md  CMakeLists.txt  package.xml  radionav
src/core/navaid_sim/src/: A424Parser.cpp  A424Parser.h  AbstractReceiver.cpp  AbstractReceiver.h  AirportDatabase.cpp  AirportDatabase.h  DME.h  DME_Receiver.cpp  DME_Receiver.h  Globals.h  ILS-GS.h  ILS-LOC.h  ILS-Marker.h  ILS_GlideslopeReceiver.cpp  ILS_GlideslopeReceiver.h  ILS_LocalizerReceiver.cpp  ILS_LocalizerReceiver.h  ILS_MarkerReceiver.cpp  ILS_MarkerReceiver.h  LOSChecker.cpp  LOSChecker.h  LatLon.cpp  LatLon.h  MagDec.cpp  MagDec.h  Model.cpp  Model.h  NDB.h  NDB_Receiver.cpp  NDB_Receiver.h  TileGrid.h  (+17 more)
src/core/sim_interfaces/: CMakeLists.txt  package.xml
src/ios_backend/: README.md  package.xml  setup.cfg
src/ios_backend/ios_backend/: ios_backend_node.py  topic_forwarder.py
src/qtg/engine/: package.xml  setup.py
src/sim_msgs/: CMakeLists.txt  package.xml
src/sim_msgs/msg/: AirDataState.msg  Airport.msg  ArbitrationState.msg  AtmosphereState.msg  AvionicsControls.msg  CigiPacket.msg  ControlsState.msg  DeviceHeartbeat.msg  ElectricalState.msg  EngineCommands.msg  EngineControls.msg  EngineState.msg  FailureCommand.msg  FailureInjection.msg  FailureList.msg  FailureState.msg  FlightControls.msg  FlightModelCapabilities.msg  FlightModelState.msg  FuelState.msg  GearState.msg  HatHotResponse.msg  HotRequest.msg  HydraulicState.msg  InitialConditions.msg  MicroburstHazard.msg  NavSignalTable.msg  NavState.msg  NavigationState.msg  PanelControls.msg  PayloadCommand.msg  RawAvionicsControls.msg  RawEngineControls.msg  RawFlightControls.msg  Runway.msg  SimCommand.msg  SimState.msg  TerrainSource.msg  WeatherCloudLayer.msg  WeatherPatch.msg  (+2 more)
src/sim_msgs/srv/: GetRunways.srv  GetTerrainElevation.srv  SearchAirports.srv  SearchNavaids.srv
src/systems/electrical/: CMakeLists.txt  README.md  package.xml
systems/electrical/: CMakeLists.txt  package.xml
systems/electrical/src/: electrical_node.cpp
systems/engines/: CMakeLists.txt  README.md  package.xml
systems/engines/src/: engines_node.cpp
systems/failures/: CMakeLists.txt  package.xml
systems/failures/src/: failures_node.cpp
systems/fuel/: CMakeLists.txt  package.xml
systems/fuel/src/: fuel_node.cpp
systems/gear/: CMakeLists.txt  README.md  package.xml
systems/gear/src/: gear_node.cpp
x-plane_plugins/xplanecigi/: CMakeLists.txt  DataRefFactory.h  IPause.h  IRepositionAccessor.h  RepositionAccessor.h  XPLMDataRefAccessor.h  XPlaneConfig.h  XPlaneData.cpp  XPlaneData.h  XPluginMain.cpp  toolchain-mingw64.cmake
(+1543 files in other folders)
