<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microros_bridge</name>
  <version>0.0.1</version>
  <description>micro-ROS bridge — publishes hardware device inputs to /devices/hardware/</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sim_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
