cmake_minimum_required(VERSION 3.8)
project(sim_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(sim_msgs REQUIRED)

ament_export_include_directories(include)
ament_export_dependencies(sim_msgs)

install(DIRECTORY include/
  DESTINATION include)

ament_package()
