<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qtg_engine</name>
  <version>0.0.1</version>
  <description>QTG engine — automated qualification test runner and report generator</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sim_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
